# unittest

./: .gitignore  CMakeLists.txt  README.md  index.html  search.html
.github/workflows/: ci.yml  documentation.yml
doc/: api-doc-ford-settings.md  api-doc-index.md
include/: common.fypp
interface/: unittest.html
lists/: files.html  modules.html  procedures.html  types.html
module/: allclose.html  almost_equal.html  bool.html  compare.html  equal.html  error_stop_08.html  error_stop_f18.html  is_eye.html  is_zero.html  mod_kinds.html  mod_unittest.html  mod_unittest_printer.html
proc/: check_expr_all.html  check_expr_not_any.html  check_rank.html
sourcefile/: allclose.fypp.html  almost_equal.fypp.html  bool.fypp.html  compare.fypp.html  equal.fypp.html  error_stop_f08.fypp.html  error_stop_f18.fypp.html  is_eye.fypp.html  is_zero.fypp.html  mod_kinds.fypp.html  mod_unittest.fypp.html  mod_unittest_printer.f90.html
src/: CMakeLists.txt  allclose.fypp  almost_equal.fypp  almost_equal.h.fypp  almost_equal.i.fypp  assert.fypp  assert.h.fypp  assert.i.fypp  bool.fypp  bool.h.fypp  bool.i.fypp  common.fypp  compare.fypp  compare.h.fypp  compare.i.fypp  equal.fypp  equal.h.fypp  equal.i.fypp  error_stop_f08.fypp  error_stop_f18.fypp  gen_assertequal.sh  get_constants.f90  image_functions.fypp  interface.fypp  is_eye.fypp  is_eye.h.fypp  is_eye.i.fypp  is_symmetric.fypp  is_zero.fypp  mod_kinds.fypp  mod_unittest.f90  mod_unittest.fypp  mod_unittest_kinds.fypp  mod_unittest_printer.f90  mod_unittest_tap14_yaml.fypp  procedure.fypp  report_functions.fypp  result_functions.fypp  tap.fypp  test_unittest.f90  (+10 more)
test/: CMakeLists.txt  test_allclose.fypp  test_almost_equal.fypp  test_assert.f90  test_bool.f90  test_bool.fypp  test_compare.fypp  test_equal.fypp  test_is_eye.fypp  test_is_symmetric.fypp  test_is_zero.fypp  test_tap14_yaml.fypp  test_unittest.f90
tipuesearch/: tipuesearch_content.js
type/: expr_report.html  unittest.html
